# tools

./: CONTRIBUTING.md  NOTICE  OWNERS  README.en.md  README.md  README_EN.md  Readme.md  Readme_cn.md
AMEXEC/: amexec测试用例.xlsx  build.sh  readMe.md  模型推理工具.docx
AMEXEC/inc/: sample_process.h  utils.h
AMEXEC/src/: main.cpp  model_process.cpp  sample_process.cpp  utils.cpp
ada/: .gitignore  Readme_cn.md  ada_cmd.py  ada_prof_cmd.py  requirements.txt  setup.py
ada/ada/: __init__.py  cip.py  definitions.py  eo.py  local_machine.py  pdav2.py  reporter_registry.py  shell_printer.py  time_printer.py
ada/doc/: ada_install.md  ada_pa.md  ada_pa_dev.md
ada/onetime/: ot_gen_from_pt_profiling.py
ada/tests/: ada_pa_analyzer_unittest.py  ada_pa_base_unittest.py  ada_pa_unittest.py  main_unittest.py  path_tools.py
addr_checker/: Readme_cn.md  addr_checker.py
ai1s_auto_deploy/: Readme_cn.md  auto_deploy.sh
ais-bench_workload/: OWNERS  Readme_cn.md
ais-bench_workload/doc/: ais-bench_workload_inference推理负载说明文档.md  ais-bench_workload_train_modelarts训练说明文档.md  ais-bench_workload_train_offline线下训练说明文档.md  ais-bench_workload推理执行容器环境搭建指导.md  ais-bench_workload构建教程.md  ais_bench推理程序更新说明.md  modelarts_notebook使用入门指导.docx  制作可ssh登录镜像ascend-mindspore-arm的方法.md
ais-bench_workload/src/: ais_utils_adapter.py
ais-bench_workload/tool/ais_bench/backend/cpp_interface/: CMakeLists.txt  ais_bench_infer.cpp
amexec/: build.sh  readMe.md
amexec/inc/: model_process.h  sample_process.h  utils.h
amexec/src/: main.cpp  model_process.cpp  sample_process.cpp  utils.cpp
amexec1/src/: main.cpp  model_process.cpp
auto-optimizer/: .gitignore  OWNERS  Readme_cn.md  requirements.txt  setup.py
auto-optimizer/auto_optimizer/: __init__.py  __main__.py
auto-optimizer/docs/: knowledge_optimizer_frame.md
cann-benchmark_infer_scripts/: readme.md
cann-benchmark_infer_scripts/scripts/: bert_base_get_info.py  bert_base_pth2onnx.py  bert_metric.py  inception_tf_preprocess.py  map_calculate.py  mobilenet_caffe_preprocess.py  mobilenetv2_tf_preprocess.py  parse_COCO.py  parse_VOC2007.py  (+11 more)
configure_usb_ethernet/: README.md  README_EN.md  Readme.md  Readme_cn.md
container_capability_tool/: Readme_cn.md  modify_pod_config_json.py  modify_pod_config_logger.py
cycle_search/: Readme_cn.md  cycle_search.py
dnmetis/: README.md  README_EN.md  Readme.md  Readme_cn.md  main.py  requirements.txt  run_inference.sh
dockerimages/: LICENSE  README.md  README_EN.md  Readme.md  Readme_cn.md
dvpp_sample_input_data/: Img201509290968_H_address.txt  dvpp_jpege_444_1920x1080_1920_1080_nv12.yuv  dvpp_vdec_h264_1frame_bp_51_1920x1080.h264  dvpp_vdec_h265_1frame_mp_51_1920x1080.h265  dvpp_venc_128x128_nv12.yuv  dvpp_vpc_1920x1080_nv12.yuv  dvpp_vpc_1920x1080_yuv400.yuv  dvpp_vpc_382x300_nv12.yuv  vdec_h264_1frame_rabbit_1280x720.h264  vdec_h265_1frame_rabbit_1280x720.h265
exec_block_analyze/: Readme_cn.md  exec_block_analyze.py
faster_install/: README.md  README_EN.md  Readme.md  Readme_cn.md
img2bin/: 14. img2bin.md  README.md  README_EN.md  Readm1e.md  Readme.md  Readme_cn.md  img2bin.py  test.txt
imgtobin/: Readme.md  imgtobin.py
infershape/: Readme_cn.md  analyze_onnx_graph.py  check_infershape_main.sh  compare.sh  onnx_model_infershape.py  pb_infer_run.sh  pb_infershape.cpp  show_part_node.py
makesd/: Atlas200DK_Version_Mapping.md  README.md  README_EN.md  Readme.md  Readme_cn.md  Version_Mapping.md  Version_Mapping_CN.md
makesd_c73/: make_sd_card.py  make_ubuntu_sd.sh
mindxedge_whitebox/: Readme_cn.md  install_whitebox.sh  load_install.sh
msaicerr/: ReadMe.md  msaicerr.py
msame/: 12. Model Inference Tool：amexec.md  README.md  README_EN.md  Readme.md  Readme_cn.md  build.sh  readMe.md
msame/src/: CMakeLists.txt  main.cpp  model_process.cpp  sample_process.cpp  utils.cpp
msquickcmp/: README.md  README_EN.md  Readme.md  Readme_cn.md  l1_buffer_data_parser.py  main.py  tf_debug_runner.py
npucollector/: Readme.md  Readme_cn.md  core.sh  environment.sh  ge.sh  install.sh  log.sh  npucollect.sh  ops.sh
pod_deploy_tool/: Readme_cn.md  pod.yaml  pod_deploy.py  pod_deploy.sh
precision_tool/: README.md  RELEASE.md  Readme_cn.md  caffe_dump.py  cli.py  config.py  fusion_off.cfg  fusion_switch.cfg  tensorflow_dump.py  tf_config.py  tf_session.py
pt2pb/: README.md  Readme_cn.md  pt2onnx.py  requirements.txt
pt2tf/: README.md  pt2onnx.py  requirements.txt
ptdbg_ascend/: CMakeLists.txt  RELEASE.md  Readme_cn.md  configure  configure.py
ptdbg_ascend/doc/: FAQ.md  ptdbg_ascend精度工具功能说明.md  ptdbg_ascend精度工具功能说明_v1.0.md  ptdbg_ascend精度工具功能说明_v2.1.md  ptdbg_ascend精度工具功能说明_v2.2.md  rank_id获取方法.md  反向ACL dump用例说明.md
ptdbg_ascend/src/python/: MANIFEST.in  setup.py
ptdbg_ascend/src/python/ptdbg_ascend/: __init__.py
ptdbg_ascend/src/python/ptdbg_ascend/advisor/: advisor.py  advisor_const.py  advisor_result.py
ptdbg_ascend/src/python/ptdbg_ascend/common/: utils.py
ptdbg_ascend/src/python/ptdbg_ascend/compare/: acc_compare.py  distributed_compare.py
ptdbg_ascend/src/python/ptdbg_ascend/dump/: dump.py  utils.py
ptdbg_ascend/src/python/ptdbg_ascend/hook_module/: hook_module.py  register_hook.py  support_wrap_ops.yaml  wrap_functional.py  wrap_npu_custom.py  wrap_tensor.py  wrap_torch.py  wrap_vf.py
ptdbg_ascend/src/python/ptdbg_ascend/overflow_check/: overflow_check.py  utils.py
ptdbg_ascend/test/: run_test.sh  run_ut.py
ptdbg_ascend/test/ut/: test_hooks.py  test_utils.py
ptdbg_ascend/v1_8/hooks/: __init__.py  hooks.py  wrap_torch.py
saved_model2om/: OWNERS  Readme_cn.md  saved_model2om.py
single_op_test/: Readme_cn.md  main.py  op_test.py
tfdbg_ascend/: CMakeLists.txt  RELEASE.md  Readme_cn.md  configure.py
tfdbg_ascend/cmake/tensorflow/: module.cmake
tfdbg_ascend/src/: dump_config.cpp  dump_config.h  dump_op.cpp  dump_pass.cpp
tfdbg_ascend/src/python/: MANIFEST.in  setup.py
tfdbg_ascend/src/python/tfdbg_ascend/: __init__.py  tfdbg_ascend.py
train/: README.md  benchmark.sh  docker_ct_build.sh
update_200dk/: README_CN.md  update_200dk.sh  update_200dk_20.2.sh
(+913 files in other folders)
